--- a/notes-frontend/src/styles/CategoryManager.css
+++ b/notes-frontend/src/styles/CategoryManager.css
@@ -61,3 +61,9 @@
   font-size: 22px;
   font-weight: normal;
 }
+
+@media (max-width: 420px) {
+  .category-container form button {
+    font-size: 11px;
+  }
+}
