--- a/notes-frontend/src/styles/Notes.css
+++ b/notes-frontend/src/styles/Notes.css
@@ -47,7 +47,7 @@
 
 .note {
   width: 220px;
-  min-height: 100%;
+  max-height: 50%;
   position: relative;
   display: flex;
   flex-direction: column;
